# espidf_a2dp_ssm2518

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
docs/: qt-chatgpt-prompt.md  qt-commands.md  serial-protocol.md  tlv320-presets.md
main/: CMakeLists.txt  a2dp_status.h  main.c  serial_proto.c  serial_proto.h  ssm2518.c  ssm2518.h  tlv320dac3100.c  tlv320dac3100.h
pc/qt_serial_client/: CMakeLists.txt  README.md  main.cpp
